make table pixel rounding IE compatible, bug 188377 patch by croo@nm.ru, r=me sr=dbaron